# libsocks2c

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog.md  LICENSE  ProtocolGuide.md  README.ME  README.md  config.json  main.cpp
include/: socks2c.h
lib/: client_proxymap.h  libsocks2c-client.cpp  libsocks2c-client.h  libsocks2c-server.cpp  libsocks2c-server.h  libsocks2c.cpp  libsocks2c.h  proxymanager.cpp  proxymanager.h  proxymap.cpp  proxymap.h  server_proxymap.h  version.h
src/app/: app.h
src/factory/: client_factory.h  server_factory.h  socks2c_factory.cpp  socks2c_factory.h
src/info/: encryption_info.h  version.h
src/net/: bufferdef.h  inetwork_proxy.h
src/net/raw/: packetHelper.h  raw_socket.h  sniffer_def.h
src/net/raw/client/: basic_client_udp_raw_proxy.h  client_udp_raw_proxy.cpp  client_udp_raw_proxy.h  client_udp_raw_proxy_win32.h
src/net/raw/raw_proxy_helper/: firewall_helper.cpp  firewall_helper.h  interface_helper.cpp  interface_helper.h  port_usable_checker.cpp  port_usable_checker.h  tcp_checksum_helper.cpp  tcp_checksum_helper.h
src/net/raw/server/: buffersize_def.h  raw_udp_session.h  raw_udp_session_crossover.h  server_udp_raw_proxy.h  server_udp_raw_proxy_session.h  server_udp_raw_proxy_session_wrapper.h
src/net/raw/unix_hdr/: ip.h  tcp.h
src/net/tcp/client/: client_tcp_proxy.h  client_tcp_proxy_mt.h  client_tcp_proxy_session.h
src/net/tcp/server/: server_tcp_proxy.h  server_tcp_proxy_mt.h  server_tcp_proxy_session.h
src/net/udp/: bufferqueue.h  fec.cpp  fec.h  lockfree_queue.h  normal_queue.h  udp_socket_map.h
src/net/udp/client/: client_udp_proxy.h  client_udp_proxy_mt.h  client_udp_proxy_session.h  client_udp_proxy_withraw.h
src/net/udp/client/raw/: basic_client_raw_proxy_session.h  client_raw_proxy.h  client_raw_proxy_session.h  unix_client_raw_proxy_session.h  win_client_raw_proxy_session.h  windows_client_raw_proxy_session.h
src/net/udp/client/raw/helper/: available_port.cpp  available_port.h  firewall.cpp  firewall.h  tcp_checksum.cpp  tcp_checksum.h
src/net/udp/client/raw/unix_hdr/: tcp.h
src/net/udp/server/: bufferqueue.h  server_udp_proxy.h  server_udp_proxy_mt.h  server_udp_proxy_session.h
src/netio/: basic_network_io.h  basic_network_io_mt.cpp  basic_network_io_mt.h
src/protocol/: client_proxy_protocol.h  iproxy_protocol.h  protocol_def.h  server_proxy_protocol.h  socks5_protocol.h
src/protocol/basic_protocol/: client_proxy_protocol.h  iproxy_protocol.h  protocol_def.h
src/protocol/custom/aes256gcmwithobf/: aes256gcmwithobf.h  aes256gcmwithobf_helper.h
src/protocol/custom/chacha20/: chacha20.h  chacha20_helper.h
src/protocol/custom/chacha20poly1305withobf/: chacha20poly1305withobf_helper.h
src/protocol/custom/netunnel-aes256gcmwithobf/: netunnel_protocol.h  netunnel_protocol_helper.h  user_info.h
src/protocol/custom/netunnel-aes256gcmwithobf/userstatistic/: psql.cpp  psql.h  statistic_helper.cpp  statistic_helper.h
src/protocol/custom/netunnel-aes256gcmwithobf/userstatistic/sql/: user_info.sql  user_statistic.sql
src/protocol/custom/netunnel-aes256gcmwithobf/userstatistic/untitled folder/: user_statistic.sql
src/protocol/socks5/: socks5_default_udp_reply.h  socks5_protocol.h  socks5_protocol_helper.cpp  socks5_protocol_helper.h
src/state/: globalstate.h
src/utils/: Singleton.h  cacheline_helper.c  destruction_queue.h  ephash.h  logger.cpp  logger.h  macro_def.h  randomNumberGenerator.cpp  singleton.h  sqlhost.h  trafficcounter.cpp  trafficcounter.h
src/utils/system/: system_exec.h
test/: multiservertest.h  multiservertestwithmultiio.h  runclient.h  servermt.h  servermt_loop.h
test/example/: runclient.h  runservermt.h
test/socks5protocolhelper/: CMakeLists.txt  test.cpp
